--- a/TestApp.ViewModels/TestApp.ViewModels.csproj
+++ b/TestApp.ViewModels/TestApp.ViewModels.csproj
@@ -40,10 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\FacultyView.cs" />
+    <Compile Include="Models\SpecialtyView.cs" />
+    <Compile Include="Models\StudentView.cs" />
+    <Compile Include="Models\TeacherView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
