--- a/TestApp.BLL/TestApp.BLL.csproj
+++ b/TestApp.BLL/TestApp.BLL.csproj
@@ -30,8 +30,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=6.2.2.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.6.2.2\lib\net45\AutoMapper.dll</HintPath>
+    </Reference>
+    <Reference Include="Ninject, Version=3.3.4.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.3.4\lib\net45\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,7 +47,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Infrastructure\AutoMapperModule.cs" />
+    <Compile Include="Interfaces\IStudentService.cs" />
+    <Compile Include="Mapping\StudentMappingProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Infrastructure\ServiceModule.cs" />
+    <Compile Include="Services\StudentService.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TestApp.Domain\TestApp.Domain.csproj">
+      <Project>{2b2463de-e1bf-439c-9b30-d459cd6419a2}</Project>
+      <Name>TestApp.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TestApp.ViewModels\TestApp.ViewModels.csproj">
+      <Project>{3dd2caf2-b848-4015-837b-989c71475e9f}</Project>
+      <Name>TestApp.ViewModels</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
