add Teacher  services

--- a/TestApp.Domain/TestApp.Domain.csproj
+++ b/TestApp.Domain/TestApp.Domain.csproj
@@ -54,9 +54,9 @@
     <Compile Include="Entities\Teacher.cs" />
     <Compile Include="Interfaces\IRepository.cs" />
     <Compile Include="Interfaces\IUnitOfWork.cs" />
-    <Compile Include="Migrations\201805010621483_Init.cs" />
-    <Compile Include="Migrations\201805010621483_Init.Designer.cs">
-      <DependentUpon>201805010621483_Init.cs</DependentUpon>
+    <Compile Include="Migrations\201805011122321_Initial.cs" />
+    <Compile Include="Migrations\201805011122321_Initial.Designer.cs">
+      <DependentUpon>201805011122321_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -71,8 +71,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201805010621483_Init.resx">
-      <DependentUpon>201805010621483_Init.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201805011122321_Initial.resx">
+      <DependentUpon>201805011122321_Initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
