--- a/TestApp.BLL/TestApp.BLL.csproj
+++ b/TestApp.BLL/TestApp.BLL.csproj
@@ -49,10 +49,13 @@
   <ItemGroup>
     <Compile Include="Infrastructure\AutoMapperModule.cs" />
     <Compile Include="Interfaces\IStudentService.cs" />
+    <Compile Include="Interfaces\ITeacherService.cs" />
     <Compile Include="Mapping\StudentMappingProfile.cs" />
+    <Compile Include="Mapping\TeacherMappingProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Infrastructure\ServiceModule.cs" />
     <Compile Include="Services\StudentService.cs" />
+    <Compile Include="Services\TeacherService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TestApp.Domain\TestApp.Domain.csproj">
